--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,14 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
-# vercel
+# # vercel
 .vercel
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
