--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "recoil": "^0.7.6",
+    "sass": "^1.55.0",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.2"
   },
